# primes

./: .gitignore  LICENSE  README  memory.hs  primes.cabal  runtime.hs
Data/Numbers/: Primes.hs
