Name:          primes
Version:       0.2.1.0
Cabal-Version: >= 1.6
Synopsis:      Efficient, purely functional generation of prime numbers
Description:

  This Haskell library provides an efficient lazy wheel sieve for
  prime generation inspired by /Lazy wheel sieves and spirals of/
  /primes/ by Colin Runciman and /The Genuine Sieve of Eratosthenes/
  by Melissa O'Neil.

Category:      Algorithms, Numerical
License:       BSD3
License-File:  LICENSE
Author:        Sebastian Fischer
Maintainer:    Sebastian Fischer
Bug-Reports:   http://github.com/sebfisch/primes/issues
Homepage:      http://github.com/sebfisch/primes
Build-Type:    Simple
Stability:     experimental

Extra-Source-Files: README, memory.hs, runtime.hs

Library
  Build-Depends:    base == 4.*
  Exposed-Modules:  Data.Numbers.Primes
  Ghc-Options:      -Wall -fno-warn-incomplete-patterns

Source-Repository head
  type:     git
  location: git://github.com/sebfisch/primes.git
